--- a/src/public/index.html
+++ b/src/public/index.html
@@ -93,29 +93,6 @@
 
 
 
-
-                    <div class="col-lg-4 ">
-                        <table class="table table-striped table-hover table-bordered">
-                            <caption> Completion Times (sec)</caption>
-                            <tr>
-                                <th>Min:</th>
-                                <td data-bind="text: min"></td>
-                            </tr>
-                            <tr>
-                                <th>Max:</th>
-                                <td data-bind="text: max"></td>
-                            </tr>
-                            <tr>
-                                <th>Mean:</th>
-                                <td data-bind="text: mean"></td>
-                            </tr>
-                            <tr>
-                                <th>Variance:</th>
-                                <td data-bind="text: variance"></td>
-                            </tr>
-                        </table>
-                    </div>
-
                 </div>
 
 
@@ -174,8 +151,30 @@
                                     <div class="text">View the total request completion time per device</div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-lg-4 col-offset-4">
+                                    <table class="table table-striped table-hover table-bordered">
+                                        <caption> Completion Times (sec)</caption>
+                                        <tr>
+                                            <th>Min:</th>
+                                            <td data-bind="text: min"></td>
+                                        </tr>
+                                        <tr>
+                                            <th>Max:</th>
+                                            <td data-bind="text: max"></td>
+                                        </tr>
+                                        <tr>
+                                            <th>Mean:</th>
+                                            <td data-bind="text: mean"></td>
+                                        </tr>
+                                        <tr>
+                                            <th>Variance:</th>
+                                            <td data-bind="text: variance"></td>
+                                        </tr>
+                                    </table>
+                                </div>
 
-
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <a href="#" data-dismiss="modal" class="btn btn-default">Close</a>
@@ -297,7 +296,7 @@
                                                 <!--  <input type="text" class="form-control input-small" id="action" placeholder="Example: logon" data-bind="value: config().action"> -->
                                                 <select id="deviceType" class="form-control" data-bind="value: config.deviceType">
                                                     <option value="OpenStage 60">OpenStage 60</option>
-                                                    <option value="OpenStage 60">OpenStage 60</option>
+                                                    <option value="OpenStage 80">OpenStage 80</option>
                                                 </select>
                                             </div>
                                         </div>
